--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <meta name="viewport" content="width=device-width">
 </head>
-<body unresolved>
+<body>
   <div id="main">
-<!--  Hello world!   You'll be deleting this line in the course -->
 
     <!--
     Everything from here to the <script> tag below is the skeleton of your
@@ -54,7 +53,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     display by looking at the id or at what's written between the <h2> tags.
     -->
     <div id="header" class="center-content">
-      <ul id="topContacts" class='flex-box'></ul>
+      <ul id="topContacts" class="flex-box"></ul>
     </div>
     <div style='clear: both;'></div>
     <div id="workExperience" class='gray'>
@@ -108,7 +107,6 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   /*
       an opening and closing set of slash asterisks for block comments.
   */
-
 
   if(document.getElementsByClassName("flex-item").length === 0) {
     document.getElementById("topContacts").style.display = "none";
