Separted resumebuilder.js into 4 js files.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 
   <!-- More on helper.js in the class -->
   <script src="js/helper.js"></script>
-
+  
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive
   Google Map to your resume!
@@ -83,8 +83,11 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   writing. In resumeBuilder.js, you'll be writing code that builds the resume
   dynamically when this website, index.html, is opened.
   -->
-  <script src="js/resumeBuilder.js"></script>
 
+  <script src="js/bio.js"></script>
+  <script src="js/education.js"></script>
+  <script src="js/work.js"></script>
+  <script src="js/projects.js"></script>
 
   <!--
   These scripts are written in JavaScript. You'll be breaking them down as part of
